
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static int pid_before(int base, int a, int b)
{






 return (unsigned)(a - base) < (unsigned)(b - base);
}
